--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>{% block title %}Medrupaloscil{% endblock %}</title>
-    <link href="css/style.css" rel="stylesheet">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
+    <!--[if lte IE 8]><script src="../js/html5shiv.js"></script><![endif]-->
+    <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="application/javascript" src="../js/skel.min.js"></script>
+    <script type="application/javascript" src="../js/skel-panels.min.js"></script>
+    <script type="application/javascript" src="../js/init.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="../css/skel-noscript.css" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="../css/style-desktop.css" />
+    </noscript>
 </head>
-<body>
+<body class="homepage">
+
+    <!-- Header -->
+    <div id="header">
+        <div class="container">
+
+            <!-- Logo -->
+            <div id="logo">
+                <h1><a href="#">Autonomy</a></h1>
+            </div>
+
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li{% block indexActive %}{% endblock %}><a href="index">Homepage</a></li>
+                    <li{% block productsActive %}{% endblock %}><a href="products">Products</a></li>
+                    <li{% block contactActive %}{% endblock %}><a href="contact">Contact</a></li>
+                </ul>
+            </nav>
+
+        </div>
+    </div>
+
+    <div id="banner">&nbsp;</div>
+
     {% block body %}
     {% endblock %}
+
+    <!-- Copyright -->
+    <div id="copyright">
+        <div class="container">
+            Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+        </div>
+    </div>
 </body>
 </html>
