--- a/src/views/index.html.twig
+++ b/src/views/index.html.twig
@@ -17,7 +17,7 @@
 
                     <div class="3u">
                         <section>
-                            <a href="#" class="image full"><img src="../Images/{{ post.photos }}" alt=""></a>
+                            <a href="#" class="image full"><img src="../images/{{ post.photos }}" alt=""></a>
                             <header>
                                 <h2>{{ post.title }}</h2>
                             </header>
@@ -39,13 +39,13 @@
                             <h2>Praesent eleifend</h2>
                         </header>
                         <ul class="style1">
-                            <li class="first"><img src="../Images/pics06.jpg" width="80" height="80" alt="">
+                            <li class="first"><img src="../images/pics06.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
-                            <li><img src="../Images/pics07.jpg" width="80" height="80" alt="">
+                            <li><img src="../images/pics07.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
-                            <li><img src="../Images/pics08.jpg" width="80" height="80" alt="">
+                            <li><img src="../images/pics08.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
                         </ul>
@@ -57,13 +57,13 @@
                             <h2>Maecenas lectus</h2>
                         </header>
                         <ul class="style1">
-                            <li class="first"><img src="../Images/pics09.jpg" width="80" height="80" alt="">
+                            <li class="first"><img src="../images/pics09.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
-                            <li><img src="../Images/pics10.jpg" width="80" height="80" alt="">
+                            <li><img src="../images/pics10.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
-                            <li><img src="../Images/pics11.jpg" width="80" height="80" alt="">
+                            <li><img src="../images/pics11.jpg" width="80" height="80" alt="">
                                 <p>Nullam non wisi a sem eleifend. Donec mattis libero eget urna. </p>
                             </li>
                         </ul>
@@ -74,7 +74,7 @@
                         <header>
                             <h2>Aenean elementum facilisis ligula</h2>
                         </header>
-                        <a href="#" class="image full"><img src="../Images/pics12.jpg" alt=""></a>
+                        <a href="#" class="image full"><img src="../images/pics12.jpg" alt=""></a>
                         <p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet. Donec mattis libero eget urna. Duis pretium velit ac mauris.</p>
                     </section>
                 </div>
