add some twig variables and route parameters (but there is some bugs to fix)

--- a/src/views/index.html.twig
+++ b/src/views/index.html.twig
@@ -17,7 +17,7 @@
 
                     <div class="3u">
                         <section>
-                            <a href="#" class="image full"><img src="../images/{{ post.photos }}" alt=""></a>
+                            <a href="{{ path }}/article/{{ post.id }}" class="image full"><img src="{{ assets }}/images/{{ post.photos }}" alt=""></a>
                             <header>
                                 <h2>{{ post.title }}</h2>
                             </header>
