--- a/src/views/article.html.twig
+++ b/src/views/article.html.twig
@@ -5,13 +5,19 @@
 {% endblock %}
 
 {% block body %}
-    <div class="3u">
-        <section>
-            <a href="#" class="image full"><img src="{{ assets }}/images/{{ post.photos }}" alt=""></a>
-            <header>
-                <h2>{{ post.title }}</h2>
-            </header>
-            <p>{{ post.content }}</p>
-        </section>
+    <div id="featured">
+        <div class="container">
+            <div class="row">
+                <div class="3u">
+                    <section>
+                        <a href="#" class="image full"><img src="{{ assets }}/images/{{ post.photos }}" alt=""></a>
+                        <header>
+                            <h2>{{ post.title }}</h2>
+                        </header>
+                        <p>{{ post.content }}</p>
+                    </section>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
