--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <title>{% block title %}Medrupaloscil{% endblock %}</title>
+    <base href="/frameSup/web/index.php/">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
-    <!--[if lte IE 8]><script src="{{ assets }}/js/html5shiv.js"></script><![endif]-->
+    <!--[if lte IE 8]><script src="../js/html5shiv.js"></script><![endif]-->
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="application/javascript" src="{{ assets }}/js/skel.min.js"></script>
-    <script type="application/javascript" src="{{ assets }}/js/skel-panels.min.js"></script>
-    <script type="application/javascript" src="{{ assets }}/js/init.js"></script>
+    <script type="application/javascript" src="../js/skel.min.js"></script>
+    <script type="application/javascript" src="../js/skel-panels.min.js"></script>
+    <script type="application/javascript" src="../js/init.js"></script>
     <noscript>
-        <link rel="stylesheet" href="{{ assets }}/css/skel-noscript.css" />
-        <link rel="stylesheet" href="{{ assets }}/css/style.css" />
-        <link rel="stylesheet" href="{{ assets }}/css/style-desktop.css" />
+        <link rel="stylesheet" href="../css/skel-noscript.css" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="../css/style-desktop.css" />
     </noscript>
 </head>
 <body class="homepage">
@@ -31,9 +32,9 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li{% block indexActive %}{% endblock %}><a href="{{ path }}/">Homepage</a></li>
-                    <li{% block productsActive %}{% endblock %}><a href="{{ path }}/products">Products</a></li>
-                    <li{% block contactActive %}{% endblock %}><a href="{{ path }}/contact">Contact</a></li>
+                    <li{% block indexActive %}{% endblock %}><a href="">Homepage</a></li>
+                    <li{% block productsActive %}{% endblock %}><a href="products">Products</a></li>
+                    <li{% block contactActive %}{% endblock %}><a href="contact">Contact</a></li>
                 </ul>
             </nav>
 
